# TestingFunctionalCodeKata.cpp

./: CMakeLists.txt  README.md
code/: CMakeLists.txt  Legacy.h  Macros.h  MapUtilities.h  Person.h  TrigMath.h
doc/mdsource/: testing.dot
tests/: CMakeLists.txt  LegacyTest.cpp  PersonTest.cpp  Test.Starter_Test.approved.txt  Test.Starter_Test_4.approved.txt  Test.Test_Sin.approved.txt  Test.cpp  main.cpp
